# ollama-fastmcp-wrapper

./: .gitignore  API_USAGE.md  CHANGELOG.md  CLI_USAGE.md  OLLAMA_SERVER.md  README.md  math_server.py  mcpserver_config.py  ollama_wrapper.py  pyproject.toml  server_config.toml  wrapper_config.py  wrapper_config.toml
demos/: README.md  basic_chat.py  basic_chat.sh  demo_config.py  get_wrapper_url.sh  history_management.py  history_management.sh  ipinfo_lookup.py  ipinfo_lookup.sh  math_operations.py  math_operations.sh  server_management.py  server_management.sh  temperature_test.py  temperature_test.sh  temperature_test_multi_model.py  temperature_test_multi_model.sh  temperature_test_utils.py
demos/coreference/: compare_pre_post.py  compare_results.py  compare_specular.py  compare_textfile_results.py  coreference_test.py  coreference_test_from_textfile.py  coreference_utils.py  coreference_watcher.py
demos/coreference/datasets/: debug_clean_text_1.txt  debug_clean_text_2.txt
demos/prompts/: README.md
mcp_servers/: README.md  demo_config.py  ipinfo_server.py  math_server.py  mcp_servers_config.toml  mcp_tokens.toml.example  mcpserver_config.py
prompts/: README.md
tests/: README.md  conftest.py  test_async_history.py
