[project]
name = "Ollama-FastMCP-Wrapper"
version = "0.6.2"
description = "A proxy service that bridges Ollama with FastMCP thus allowing MCP servers to be plugged and used locally."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.0.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "ollama>=0.5.3",
    "uvicorn>=0.35.0",
]
